Improve project