@@ -1,11 +1,11 @@
 package io.amplicode.jpa.repository;
 
-import io.amplicode.jpa.TestUtils;
 import io.amplicode.jpa.model.Post;
 import io.amplicode.jpa.model.Post_;
-import io.amplicode.jpa.model.User;
 import io.amplicode.jpa.model.User_;
-import io.amplicode.jpa.projection.*;
+import io.amplicode.jpa.projection.PostWithLikeUsersDto;
+import io.amplicode.jpa.projection.PostWithLikeUsersFlat;
+import io.amplicode.jpa.projection.UserPresentationDto;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.persistence.Tuple;
@@ -18,9 +18,8 @@ import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 
-import static io.amplicode.jpa.InitTestDataService.POST1_SLUG;
+import static io.amplicode.jpa.InitTestDataService.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 @SpringBootTest
 @ActiveProfiles("postgres")
@@ -33,90 +32,114 @@ public class ToManyTest {
     private EntityManager em;
 
     /**
-     * Хорошая новость, это работает. Тест проходит. Плохая, что в запросе будут указаны все поля,
-     * при чем как и для атрибутов первого уровня, так и для вложенных из ToMany ассоциации.
-     * Ожидаемо, и объект первого уровня и объект второго являются прокси во круг сущности.
-     */
-    @Test
-    void derivedMethodInterfaceNestedPrj() throws Exception {
-        List<PostWithLikeUsersNested> articles = postRepository.findAllWithLikeUsersByTitleContainsIgnoreCase("tcp", PostWithLikeUsersNested.class);
-        assertEquals(1, articles.size());
-        var article = articles.get(0);
-        assertInstanceOf(Post.class, TestUtils.getProxyTargetObject(article));
-        assertEquals(POST1_SLUG, article.getSlug());
-        List<UserPresentation> likeUsers = article.getLikeUsers();
-        assertEquals(2, likeUsers.size());
-        UserPresentation firstLikeUser = likeUsers.get(0);
-        assertInstanceOf(User.class, TestUtils.getProxyTargetObject(firstLikeUser));
-        assertEquals("Maksim Esteban", firstLikeUser.getUsername());
-        assertEquals("Ping Sokołowski", likeUsers.get(1).getUsername());
-    }
-
-    /**
-     * Вообще что из себя представляет запрос при попытке загрузить to-many связь. Это произведение
-     *
-     * @throws Exception
+     * Работает это как-то так. Сам hibernate не умеет нормально мапить коллекционные атрибуты в DTO/Projection.
+     * HQL вернет нам n + m, где n - это количество записей post по нашему запросу, а m это сумма всех связанных с этими постами like users.
+     * Условно, запрос будет такого вида
+     * <code>
+     *     Hibernate:
+     *     select
+     *         p1_0.id,
+     *         p1_0.slug,
+     *         p1_0.title,
+     *         lu1_0.user_id,
+     *         lu1_1.username
+     *     from
+     *         posts p1_0
+     *     left join
+     *         post_like_users lu1_0
+     *             on p1_0.id=lu1_0.post_id
+     *     left join
+     *         users lu1_1
+     *             on lu1_1.id=lu1_0.user_id
+     *     where
+     *         upper(p1_0.title) like upper(?) escape '\'
+     * </code>
+     * <p>
+     * На наших тестовых данных есть всего один post, который удовлетворяет этому запросу, но записей вернеться две,
+     * т.к. у этого поста два like users, и произойдет некоторый дубляж данных для p1_0.id, p1_0.slug, p1_0.title
      */
     @Test
     void derivedMethodInterfaceFlatPrj() throws Exception {
-        List<PostWithLikeUsersAsFlat> articles = postRepository.findAllWithLikeUsersByTitleContainsIgnoreCase("tcp", PostWithLikeUsersAsFlat.class);
-        assertEquals(2, articles.size());
-        var article = articles.getFirst();
-        assertEquals("org.springframework.data.jpa.repository.query.AbstractJpaQuery$TupleConverter$TupleBackedMap", TestUtils.getProxyTargetObject(article).getClass().getName());
-        assertEquals(POST1_SLUG, article.getSlug());
-//        List<UserPresentation> likeUsers = article.getLikeUsers();
-//        assertEquals(2, likeUsers.size());
-//        UserPresentation firstLikeUser = likeUsers.get(0);
-//        assertInstanceOf(User.class, TestUtils.getProxyTargetObject(firstLikeUser));
-//        assertEquals("Maksim Esteban", firstLikeUser.getUsername());
-//        assertEquals("Ping Sokołowski", likeUsers.get(1).getUsername());
+        List<PostWithLikeUsersFlat> posts = postRepository.findAllByTitleContainsIgnoreCase("spring", PostWithLikeUsersFlat.class);
+        assertEquals(2, posts.size());
+        var post = posts.getFirst();
+        assertEquals(POST1_SLUG, post.getSlug());
+
+        PostWithLikeUsersFlat post1 = posts.get(0);
+        PostWithLikeUsersFlat post2 = posts.get(1);
+        assertEquals(post1.getId(), post2.getId());
+        assertEquals(POST1_AUTHOR_NAME, post1.getLikeUsersUsername());
+        assertEquals(POST2_AUTHOR_NAME, post2.getLikeUsersUsername());
     }
 
+
     /**
-     * C flat dct в порядке
+     * Такой же side effect как и в кейсе с проекцией, загружается n + m записей.
      */
     @Test
     void derivedMethodClassFlat() {
-        List<PostWithLikeUsersDto> articles = postRepository.findAllByTitleContainsIgnoreCase("tcp", PostWithLikeUsersDto.class);
-        assertEquals(2, articles.size());
-        var articleFirst = articles.getFirst();
-        assertEquals(POST1_SLUG, articleFirst.slug());
-//        List<User> likeUsers = articleFirst.likeUsers().stream().toList();
-//        assertEquals(2, likeUsers.size());
-//        assertEquals("Maksim Esteban", likeUsers.get(0).getUsername());
-//        assertEquals("Ping Sokołowski", likeUsers.get(1).getUsername());
+        List<PostWithLikeUsersDto> post = postRepository.findAllByTitleContainsIgnoreCase("spring", PostWithLikeUsersDto.class);
+        assertEquals(2, post.size());
+        var postFirst = post.getFirst();
+        assertEquals(POST1_SLUG, postFirst.slug());
+
+        var post1 = post.get(0);
+        var post2 = post.get(1);
+        assertEquals(post1.id(), post2.id());
+        assertEquals(POST1_AUTHOR_NAME, post1.likeUsersUsername());
+        assertEquals(POST2_AUTHOR_NAME, post2.likeUsersUsername());
     }
 
     @Test
     void queryMethodInterfaceFlatPrj() {
-        var articles = postRepository.findInterfaceFlatPrj("tcp");
-        assertEquals(2, articles.size());
-        var article = articles.getFirst();
-        assertEquals("Ill-quantify-the-redundant-TCP-bus-that-should-hard-drive-the-ADP-bandwidth!-553", article.getSlug());
-        assertEquals("Maksim Esteban", article.getLikeUsersUsername());
+        var posts = postRepository.findInterfaceFlatPrj("spring");
+        assertEquals(2, posts.size());
+        var post = posts.getFirst();
+        assertEquals(POST1_SLUG, post.getSlug());
+
+        var post1 = posts.get(0);
+        var post2 = posts.get(1);
+        assertEquals(post1.getId(), post2.getId());
+        assertEquals(POST1_AUTHOR_NAME, post1.getLikeUsersUsername());
+        assertEquals(POST2_AUTHOR_NAME, post2.getLikeUsersUsername());
     }
 
     @Test
     void queryMethodClassFlatPrj() {
-        var articles = postRepository.findToManyClassFlat("tcp");
-        assertEquals(2, articles.size());
-        var article = articles.getFirst();
-        assertEquals("Ill-quantify-the-redundant-TCP-bus-that-should-hard-drive-the-ADP-bandwidth!-553", article.slug());
-        assertEquals("Maksim Esteban", article.likeUsersUsername());
+        var posts = postRepository.findToManyClassFlat("spring");
+        assertEquals(2, posts.size());
+        var post = posts.getFirst();
+        assertEquals(POST1_SLUG, post.slug());
+
+        var post1 = posts.get(0);
+        var post2 = posts.get(1);
+        assertEquals(post1.id(), post2.id());
+        assertEquals(POST1_AUTHOR_NAME, post1.likeUsersUsername());
+        assertEquals(POST2_AUTHOR_NAME, post2.likeUsersUsername());
     }
 
     @Test
     void queryMethodClassNested() {
-        var articles = postRepository.findToManyClassNested("tcp");
-        assertEquals(2, articles.size());
-        var article = articles.getFirst();
-        assertEquals("Ill-quantify-the-redundant-TCP-bus-that-should-hard-drive-the-ADP-bandwidth!-553", article.slug());
-        assertEquals("Maksim Esteban", article.likeUser().username());
+        var posts = postRepository.findToManyClassNested("spring");
+        assertEquals(2, posts.size());
+        var post = posts.getFirst();
+        assertEquals(POST1_SLUG, post.slug());
+
+        var post1 = posts.get(0);
+        var post2 = posts.get(1);
+        assertEquals(post1.id(), post2.id());
+        assertEquals(POST1_AUTHOR_NAME, post1.likeUser().username());
+        assertEquals(POST2_AUTHOR_NAME, post2.likeUser().username());
     }
 
+    /**
+     * В данном примере, мы выполняем запрос через @Query метод и получаем Tuple как результат.
+     * Затем мы перекладываем выгруженные данные уже в готовый DTO класс.
+     * Также решаем проблему схлопывания дубликатов
+     */
     @Test
     void queryMethodTuple() {
-        var postTuples = postRepository.findToManyTuple("tcp");
+        var postTuples = postRepository.findToManyTuple("spring");
         assertEquals(2, postTuples.size());
 
         var postMap = new LinkedHashMap<Long, PostWithLikeUsers>();
@@ -140,11 +163,11 @@ public class ToManyTest {
         assertEquals(1, posts.size());
         PostWithLikeUsers firstPost = posts.getFirst();
 
-        assertEquals("Ill-quantify-the-redundant-TCP-bus-that-should-hard-drive-the-ADP-bandwidth!-553", firstPost.slug());
+        assertEquals(POST1_SLUG, firstPost.slug());
         List<UserPresentationDto> likeUsers = firstPost.likeUsers;
         assertEquals(2, likeUsers.size());
-        assertEquals("Maksim Esteban", likeUsers.get(0).username());
-        assertEquals("Ping Sokołowski", likeUsers.get(1).username());
+        assertEquals(POST1_AUTHOR_NAME, likeUsers.get(0).username());
+        assertEquals(POST2_AUTHOR_NAME, likeUsers.get(1).username());
     }
 
     @Test
@@ -161,7 +184,7 @@ public class ToManyTest {
         var likeUsersUsernamePath = owner.get(Post_.LIKE_USERS).<String>get(User_.USERNAME);
 
         query.select(cb.tuple(idPath, slugPath, titlePath, likeUsersIdPath, likeUsersUsernamePath))
-                .where(cb.like(cb.lower(titlePath), "%tcp%"));
+                .where(cb.like(cb.lower(titlePath), "%spring%"));
 
         List<Tuple> postTuples = em.createQuery(query).getResultList();
 
@@ -186,11 +209,11 @@ public class ToManyTest {
         assertEquals(1, posts.size());
         PostWithLikeUsers firstPost = posts.getFirst();
 
-        assertEquals("Ill-quantify-the-redundant-TCP-bus-that-should-hard-drive-the-ADP-bandwidth!-553", firstPost.slug());
+        assertEquals(POST1_SLUG, firstPost.slug());
         List<UserPresentationDto> likeUsers = firstPost.likeUsers;
         assertEquals(2, likeUsers.size());
-        assertEquals("Maksim Esteban", likeUsers.get(0).username());
-        assertEquals("Ping Sokołowski", likeUsers.get(1).username());
+        assertEquals(POST1_AUTHOR_NAME, likeUsers.get(0).username());
+        assertEquals(POST2_AUTHOR_NAME, likeUsers.get(1).username());
     }
 
     private record PostWithLikeUsers(Long id,
